1.1 2019-03-14
~~~~~~~~~~~~~~

* Fixed bug when starting legato without being on the PATH

* Added --list to return a list of available tasks.

* Add support for LEGATO_CONFIG_PATH environment variable.

* Changed format to call python task.

* Added support to run tasks manually.

* Resolved issue where legato was not restarting immediately when a
  configuration file change was detected.

* Resolved issue where legato would perform a restart if any file in the same
  directory as the main legato config file got added/changed.

* Legato will now also automatically restart if a new config file gets added
  into one of the included directories.

1.0 2017-07-10
~~~~~~~~~~~~~~

* First official release of legato.