@@ -64,10 +64,11 @@ The task configuration is defined by:
 
 - ``events``: Applies when the type is set to ``file``. It is a list with file
   events that should be used to trigger on. Supported events are ``modify``
-  and ``create``. Optionally it can be complemented with ``unlocked`` (only on
-  Linux and macOS). If this attribute is specified the event will only happen
-  when the file is unlocked (for more information about locking files see the
-  manual page of flock(1))
+  and ``create``. Optionally it can be complemented with ``unlocked_flock`` or
+  ``unlocked_lockf`` (only on Linux and macOS). If an unlocked attribute is
+  specified the event will only happen once the file is unlocked (using
+  flock or fcntl respectively). Write permission on the file is needed to use
+  ``unlocked_lockf``
 
 - ``path``: Applies when the type is set to ``file``. It describes the
   directory to monitor
